# ClientBase

./: CMakeLists.txt  LICENSE  README.md
cmake/: Dependencies.cmake
src/Config/: ConfigManager.cpp  ConfigManager.hpp
src/Engine/: BootStrapper.cpp  BootStrapper.hpp  ClientRoot.cpp  ClientRoot.hpp  ExceptionHandler.cpp  ExceptionHandler.hpp  GameThread.hpp
src/Events/: Event.hpp
src/Feature/Module/: Category.hpp  IModule.cpp  IModule.hpp  ModuleManager.cpp  ModuleManager.hpp
src/Feature/Module/Modules/Other/: TestModule.cpp  TestModule.hpp
src/Feature/Module/Setting/: ISetting.hpp  SettingType.hpp
src/Feature/Module/Setting/Settings/: BoolSetting.hpp  FloatSetting.hpp  IntSetting.hpp
src/Managers/: HookManager.cpp  HookManager.hpp
src/Memories/: IHook.hpp
src/Memories/Hooks/Core/: ClientInstanceHook.hpp
src/Memories/Hooks/Input/: KeyboardHook.hpp
src/Memories/Hooks/Windows/: FreeLibraryAndExitHook.cpp  FreeLibraryAndExitHook.hpp
src/Memory/: HookGuard.hpp  HookManager.cpp  HookManager.hpp  IHook.hpp
src/Memory/Hooks/Core/: ClientInstanceHook.cpp  ClientInstanceHook.hpp  MinecraftGameHook.cpp  MinecraftGameHook.hpp
src/Memory/Hooks/Input/: KeyboardHook.cpp  KeyboardHook.hpp
src/Memory/Hooks/Windows/: FreeLibraryAndExitHook.cpp  FreeLibraryAndExitHook.hpp
src/Runtimes/: ClientRuntime.cpp  ClientRuntime.hpp  GameRuntime.cpp  GameRuntime.hpp
src/SDK/Game/Core/: ClientInstance.cpp  ClientInstance.hpp  MinecraftGame.cpp  MinecraftGame.hpp
src/SDK/Mappings/: Addresses.cpp  Addresses.hpp
src/System/: ClientStorage.cpp  ClientStorage.hpp
src/Utils/Common/: Timer.hpp
src/Utils/Memory/: Address.hpp  VTable.hpp
